added one joint to xacro file

--- a/URDF_description/launch/controller.yaml
+++ b/URDF_description/launch/controller.yaml
@@ -5,3 +5,7 @@ URDF_controller:
     publish_rate: 50
 
   # Position Controllers --------------------------------------
+  Revolute 43_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: Revolute 43
+    pid: {p: 100.0, i: 0.01, d: 10.0}
